--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,4 @@ code/*fastq
 output/02*
 output/04-bismark-klone-array/*bam
 output/07*
-output/06-bismark-pipeline/*bam
+output/06-bismark-pipeline/*
